# new-airbnb-backend

./: pyproject.toml
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
categories/: views.py
categories/migrations/: 0001_initial.py
config/: settings.py  urls.py
direct_messages/migrations/: 0001_initial.py  0002_alter_chattingroom_users_alter_message_room_and_more.py
experiences/migrations/: 0001_initial.py  0002_experience_cateogry.py  0003_rename_cateogry_experience_category.py  0004_alter_experience_category_alter_experience_host_and_more.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py  0002_initial.py  0002_rename_price_house_price_per_night.py  0003_house_pets_allowed.py
medias/migrations/: 0001_initial.py  0002_alter_photo_experience_alter_photo_room_and_more.py
reviews/: admin.py
reviews/migrations/: 0001_initial.py  0002_alter_review_experience_alter_review_room_and_more.py
rooms/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
rooms/migrations/: 0001_initial.py  0002_room_name_alter_amenity_description.py  0003_alter_amenity_options.py  0004_room_cateogry.py  0005_alter_room_amenities_alter_room_cateogry_and_more.py  0006_rename_cateogry_room_category.py
rooms/templates/: all_rooms.html  room_detail.html
users/migrations/: 0001_initial.py
wishlists/migrations/: 0001_initial.py  0002_alter_wishlist_experiences_alter_wishlist_rooms_and_more.py
