[tool.poetry]
name = "new-airbnb-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "new_airbnb_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.5"
black = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
